arr-stack/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:version-2.3.0.5236
        volumeMounts:
          - name: config
            mountPath: /config
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
          requests:
            memory: "512Mi"
            cpu: "0.5"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
