arr-stack/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - port: 9696
    targetPort: 9696
