arr-stack/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  labels:
    app.kubernetes.io/name: prowlarr-ingress
spec:
  rules:
  - host: prowlarr.dubyatp.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prowlarr
            port: 
              number: 9696
